# metahsm

./: .gitignore  CMakeLists.txt  event.hpp  metahsm.hpp  metahsm.sln  metahsm2.hpp  metamodel.hpp  state.hpp  state_machine.hpp  test.cpp  trace.hpp  type_algorithms.hpp  type_traits.hpp
.github/workflows/: cmake-multi-platform.yml
